@@ -1,5 +1,11 @@
 2005-06-23  Andy Wingo  <wingo@pobox.com>
 
+	* gst/gstobject.h (GST_CLASS_LOCK, GST_CLASS_TRYLOCK) 
+	(GST_CLASS_UNLOCK, GST_CLASS_GET_LOCK, GstObjectClass)
+	* gst/gstobject.c (gst_object_class_init): Make the class lock
+	recursive. Wim won't let me drop deep_notify. Decodebin works
+	again, whoopdy doo.
+
 	* gst/gstghostpad.c (on_int_notify): Catches notify::caps on the
 	internal pad, and hacks accordingly. Doesn't do it on the target
 	pad because we change its caps. Probably catches all cases of
